<resources>
    <string name="app_name">Message</string>
    <string name="fragment_login_text_input_layout_hint">电子邮箱</string>
    <string name="fragment_login_text_input_layout_hint2">密码</string>
    <string name="fragment_login_title">你的电子邮箱</string>
    <string name="fragment_login_checkbox">同步通讯录</string>
    <string name="fragment_login_button">国家</string>
    <string name="fragment_login_subtitle">提供电子邮箱以供注册/登录</string>
    <string name="fragment_login_toolbar_cd_more">更多</string>
    <string name="fragment_login_floating">下一步</string>
    <string name="number_1">1</string>
    <string name="item_number_button_sub">ABC</string>
    <string name="fragment_notify_toolbar_cd_search">搜索</string>
    <string name="fragment_notify_tab_chat">Chat</string>
    <string name="fragment_notify_tab_group">Group</string>
    <string name="fragment_notify_tab_notify">Notify</string>
    <string name="item_notify_title">Durov\'s Channel</string>
    <string name="item_notify_subtitle">Thought from the Product Manager / CEO / Founder of Telegram.</string>
    <string name="item_notify_time">PM 1:16</string>
    <string name="item_notify_unread">108</string>
    <string name="item_message_title">Durov</string>
    <string name="item_message_subtitle">Thought from the Product Manager / CEO / Founder of Telegram.</string>
    <string name="fragment_message_title">Durov</string>
    <string name="fragment_message_subtitle">在线</string>
    <string name="fragment_message_toolbar_cd_more">更多</string>
    <string name="fragment_message_bottom_sheet_emoji">表情</string>
    <string name="fragment_message_bottom_sheet_send">发送</string>
    <string name="menu_fragment_notify_detail_videocam">视频通话</string>
    <string name="menu_fragment_notify_detail_call">语音通话</string>
    <string name="menu_fragment_notify_detail_share">分享联系人</string>
    <string name="menu_fragment_notify_detail_delete">删除联系人</string>
    <string name="fragment_notify_detail_title">Durov</string>
    <string name="fragment_notify_detail_subtitle">Thought from the Product Manager / CEO / Founder of Telegram</string>
    <string name="fragment_user_image">头像</string>
    <string name="fragment_user_toolbar_more">更多</string>
    <string name="def_value">-</string>
    <string name="dialog_alert_make_sure_info_negative">编辑</string>
    <string name="dialog_alert_make_sure_info_positive">是</string>
    <string name="dialog_alert_make_sure_info_title">此邮件地址正确吗?</string>
    <string name="dialog_alert_register_negative">不要了</string>
    <string name="dialog_alert_register_positive">是</string>
    <string name="dialog_alert_register_subtitle">是否注册?</string>
    <string name="dialog_alert_register_hint">用户名</string>
    <string name="fragment_code_title">查看您的短信消息</string>
    <string name="fragment_code_subtitle">We\'ve sent the code to your phone number.</string>
    <string name="fragment_login_illegal_phone">手机号码格式不正确</string>

    <string name="error_502">邮箱未被注册</string>
    <string name="error_513">密码错误</string>
</resources>