<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_alert_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_xxl"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_alert_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_xxl"
        android:text="@string/fragment_notify_detail_title"
        android:textAlignment="textStart"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintBottom_toBottomOf="@id/dialog_alert_card"
        app:layout_constraintEnd_toEndOf="@id/dialog_alert_card"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/dialog_alert_card"
        app:layout_constraintTop_toTopOf="@id/dialog_alert_card"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/dialog_alert_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/fragment_notify_detail_subtitle"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_m"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/dialog_alert_card"
        app:layout_constraintEnd_toEndOf="@id/dialog_alert_title"
        app:layout_constraintStart_toStartOf="@id/dialog_alert_title"
        app:layout_constraintTop_toBottomOf="@id/dialog_alert_title"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_alert_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_s"
        app:boxBackgroundColor="@color/surface"
        app:layout_constraintEnd_toEndOf="@id/dialog_alert_subtitle"
        app:layout_constraintStart_toStartOf="@id/dialog_alert_subtitle"
        app:layout_constraintTop_toBottomOf="@id/dialog_alert_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_alert_text_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_alert_negative"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/dialog_alert_make_sure_info_negative"
        app:layout_constraintEnd_toEndOf="@id/dialog_alert_card"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/dialog_alert_card"
        app:layout_constraintTop_toBottomOf="@id/dialog_alert_text_input_layout" />

    <Button
        android:id="@+id/dialog_alert_positive"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/dialog_alert_make_sure_info_positive"
        app:layout_constraintEnd_toEndOf="@id/dialog_alert_card"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/dialog_alert_card"
        app:layout_constraintTop_toBottomOf="@id/dialog_alert_text_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>