<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_code_appbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_code_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <ImageButton
                style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/fragment_login_toolbar_cd_more"
                android:src="@drawable/ic_baseline_more_vert_24" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_code_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_code_appbar_layout"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sms" />

    <TextView
        android:id="@+id/fragment_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_m"
        android:text="@string/fragment_code_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_l"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fragment_code_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/fragment_code_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_m"
        android:text="@string/fragment_code_subtitle"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintBottom_toTopOf="@id/fragment_code_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <com.thxbrop.message.components.VerificationCodeEditText
        android:id="@+id/fragment_code_edit"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:autofillHints="phone"
        android:inputType="number"
        app:codeBackground="@color/backgroundSecondary"
        app:codeLength="5"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_code_appbar_layout"
        app:layout_constraintVertical_bias="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <GridLayout
        android:id="@+id/fragment_code_gridview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginVertical="@dimen/margin_l"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3">

        <include
            android:id="@+id/fragment_login_button_1"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_2"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_3"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_4"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_5"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_6"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_7"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_8"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_9"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_plus"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_0"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

        <include
            android:id="@+id/fragment_login_button_minus"
            layout="@layout/item_number_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_xxs" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>